--- a/public/index-dev.html
+++ b/public/index-dev.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="Content-Security-Policy" content="default-src 'none'; media-src * blob:; connect-src *; img-src 'self' *.local  data: *.local *.ias-ingenierie.com; script-src 'self' https://cdnjs.cloudflare.com/ajax/libs/hls.js/ blob:; style-src 'self' 'unsafe-inline'; font-src 'self';">
         <meta name="description" content="">
-        <meta name="author" content="Mikao">
-        <title>Mikao</title>
+        <meta name="author" content="">
+        <title>Mikao (Dev)</title>
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 
         <link href="antd.css" rel="stylesheet">
@@ -17,7 +17,8 @@
 
     <body>
         <div id="app" class="app-container"></div>
+        <script src="parameters.js"></script>
+        <script src="app-dev.min.js"></script>
     </body>
 
 </html>
-
